Fix preview image layout shift
Added minimum width and height to reduce layout shifts when loading image and video previews.

--- a/components/result.module.css
+++ b/components/result.module.css
@@ -68,5 +68,8 @@
   font-size: 0.75rem;
 }
 .result video {
+  background: var(--blank-color);
+  width: 100%;
+  min-height: 90px;
   max-width: 160px;
 }
